# fwupd

./: configure.ac
docs/man/: dfu-tool.sgml  fwupdmgr.sgml
plugins/altos/: Makefile.am  README.md  fu-device-altos.c
plugins/thunderbolt/: fu-plugin-thunderbolt.c
